@@ -1,0 +1,4 @@
+# Properties for Hazelcast-based session storage bundle
+
+# Enabled/disable Hazelcast-based session storage
+com.openexchange.sessionstorage.hazelcast.enabled=true
