@@ -1,6 +1,7 @@
 * 2014-04-02 - thorben.betten@open-xchange.com
 
  - Fix for bug 31856: Changed log level for a failed update task to ERROR
+ - Fix for bug 31864: Added separate property to disable Hazelcast-based session storage
 
 * 2014-04-02 - ioannis.chouklis@open-xchange.com
 
